Addition Revlear JavaScript Animation in Sections

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="icon" href="images/home.png" />
   </head>
   <body>
+    <!-- SCROLL TOP -->
+    <a href="#" class="scrolltop" id="scroll-top"
+      ><i class="bx bx-chevron-up scrolltop__icon"></i
+    ></a>
+
     <!-- Start Header -->
     <header>
       <div class="container">
@@ -39,14 +44,14 @@
     <!-- Start Home Section -->
     <section class="home" id="home">
       <div class="container">
-        <div class="text">
+        <div class="text reveal">
           <h1>
             Tasty Food <br />
             <span>Try The Best Food Of The Week.</span>
           </h1>
           <a href="#" class="btn">View Menu</a>
         </div>
-        <div class="img">
+        <div class="img reveal">
           <img src="images/home.png" alt="" />
         </div>
       </div>
@@ -56,7 +61,7 @@
     <!-- Start Section About -->
     <section class="about" id="about">
       <div class="container">
-        <div class="text">
+        <div class="text reveal">
           <h3 class="title">About US</h3>
           <h2 class="title2">We Cook The Best Tasty Food</h2>
           <p>
@@ -65,7 +70,7 @@
           </p>
           <a href="#" class="btn">Explore History</a>
         </div>
-        <div class="img">
+        <div class="img reveal">
           <img src="images/about.jpg" alt="" />
         </div>
       </div>
@@ -74,11 +79,11 @@
 
     <!-- Start Offering Section -->
     <section class="offering" id="offering">
-      <div class="container">
+      <div class="container reveal">
         <h3 class="title">Offering</h3>
         <h2 class="title2">Our Amazing Services</h2>
         <div class="content">
-          <div class="box">
+          <div class="box reveal">
             <svg class="services" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M45.3205 21.5702L44.6357 19.3163C43.7659 16.756 40.9852 15.3857 38.4249 
@@ -166,7 +171,7 @@
               with the best and delicious food in the city.
             </p>
           </div>
-          <div class="box">
+          <div class="box reveal">
             <svg class="services" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0)">
                 <path
@@ -359,7 +364,7 @@
               with the best and delicious food in the city.
             </p>
           </div>
-          <div class="box">
+          <div class="box reveal">
             <svg class="services" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0)">
                 <path
@@ -430,11 +435,11 @@
 
     <!-- Start Menu Section -->
     <section class="menu" id="Menu">
-      <div class="container">
+      <div class="container reveal">
         <h3 class="title">Special</h3>
         <h2 class="title2">Menu Of The Week</h2>
         <div class="content">
-          <div class="box">
+          <div class="box reveal">
             <img src="images/plate1.png" alt="" />
             <h3>
               Barbecue Salad <br />
@@ -443,7 +448,7 @@
             <h2>$25.00 <del>$27.00</del></h2>
             <i class="fa-solid fa-cart-shopping"></i>
           </div>
-          <div class="box">
+          <div class="box reveal">
             <img src="images/plate3.png" alt="" />
             <h3>
               Spinach Salad <br />
@@ -452,7 +457,7 @@
             <h2>$14.00 <del>$19.00</del></h2>
             <i class="fa-solid fa-cart-shopping"></i>
           </div>
-          <div class="box">
+          <div class="box reveal">
             <img src="images/plate2.png" alt="" />
             <h3>
               Salad With Fish <br />
@@ -468,18 +473,18 @@
 
     <!-- Start App Section -->
     <section class="app" id="app">
-      <div class="container">
-        <div class="img">
+      <div class="container reveal">
+        <div class="img reveal">
           <img src="images/movil-app.png" alt="" />
         </div>
         <div class="text">
-          <h3 class="title">App</h3>
-          <h2 class="title2">App is Aviable</h2>
+          <h3 class="title reveal">App</h3>
+          <h2 class="title2 reveal">App is Aviable</h2>
           <p>
             Find Our Application And Download it, You Can Make Reservations,
             food Orders, See You Deliveries On The Way And Much More.
           </p>
-          <div class="icon-img">
+          <div class="icon-img reveal">
             <img src="images/app1.png" alt="" />
             <img src="images/app2.png" alt="" />
           </div>
@@ -491,14 +496,14 @@
     <!-- Start Contact Section -->
     <section class="contact" id="contact">
       <div class="container">
-        <h3 class="title">Let,s Talk</h3>
-        <h2 class="title2">Contact US</h2>
+        <h3 class="title reveal">Let,s Talk</h3>
+        <h2 class="title2 reveal">Contact US</h2>
         <div class="content">
-          <p>
+          <p class="reveal">
             if You Want To Reserve a Table in Our Restaurant, Contact US And We
             Will Attend You Quickly, With Our 24/7 Chat Service.
           </p>
-          <a href="#" class="contact-now">Contact US Now</a>
+          <a href="#" class="contact-now reveal">Contact US Now</a>
         </div>
       </div>
     </section>
@@ -508,7 +513,7 @@
     <footer id="footer">
       <div class="container">
         <div class="parent">
-          <div class="box">
+          <div class="box reveal">
             <h2>
               <a class="logo" href="https://yehia-gamal.github.io/yehia/"
                 >Tasty Food</a
@@ -520,7 +525,7 @@
                 <a
                   href="https://www.facebook.com/yehia.gamal.9041"
                   target="blank"
-                  class="facebook"
+                  class="facebook reveal"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
               </li>
@@ -528,21 +533,21 @@
                 <a
                   href="https://www.linkedin.com/in/yehia-gamal-b005a61b6"
                   target="blank"
-                  class="linkedin"
+                  class="linkedin reveal"
                   ><i class="fab fa-linkedin-in"></i
                 ></a>
               </li>
               <li>
                 <a
                   href="https://github.com/Yehia-Gamal"
-                  class="github"
                   target="blank"
+                  class="github reveal"
                   ><i class="fab fa-github"></i
                 ></a>
               </li>
             </ul>
           </div>
-          <div class="box">
+          <div class="box reveal">
             <h2>Services</h2>
             <ul>
               <li><a href="#">Delivery</a></li>
@@ -551,7 +556,7 @@
               <li><a href="#">Reserve your spot</a></li>
             </ul>
           </div>
-          <div class="box">
+          <div class="box reveal">
             <h2>Information</h2>
             <ul>
               <li><a href="#">Event</a></li>
@@ -560,7 +565,7 @@
               <li><a href="#">Terms of services</a></li>
             </ul>
           </div>
-          <div class="box">
+          <div class="box reveal">
             <h2>Adress</h2>
             <ul>
               <li>New York, NY 11237</li>
