addition Scroll Top Button

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   </head>
   <body>
     <!-- SCROLL TOP -->
-    <a href="#" class="scrolltop" id="scroll-top"
-      ><i class="bx bx-chevron-up scrolltop__icon"></i
-    ></a>
+    <div id="back-to-top"></div>
 
     <!-- Start Header -->
     <header>
