Addition Scroll Top Button

--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
             <h2>Adress</h2>
             <ul>
               <li>New York, NY 11237</li>
-              <li>USA(0080) 8928-5557-234</li>
-              <li><a href="#">999 - 888 - 777</a></li>
+              <li>USA 8928-5557-234</li>
+              <li><a href="#">555 - 111 - 777</a></li>
               <li><a href="#">tastyfood@email.com</a></li>
             </ul>
           </div>
