--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="#"><h3>Tasty</h3></a>
+          <a href="#"><h3>Tasty Food</h3></a>
         </div>
         <ul id="actions">
           <li><a href="#home">Home</a></li>
